# functag

./: pyproject.toml
.github/workflows/: ci.yaml
src/functag/: __init__.py  _types.py  dataframes.py  for_classes.py
